create avatar attachment. Add default avatar to assets. edit devise views adding new filds in the forms for username and avatar

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,35 +1,52 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2 class='p-3'>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+<div class="container">
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <div class="row align-items-end" style='margin: 4em 0;'>
+      <div class="col">
+        <%= cl_image_tag current_user.avatar.key, height: 120, width: 120, radius: 'max', crop: 'fill' %>
+      </div>
+      <div class="col">
+        <%= f.input :avatar, as: :file, direct_upload: true %>
+      </div>
+    </div>
+    <div class="form-inputs">
+      <%= f.input :username, required: true %>
+      <%= f.input :email, required: true %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+      <% end %>
 
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+      <div class="password-change py-3">
+        <h5 class='text-center'>Pssword change</h5>
+        <%= f.input :password,
+                  hint: "leave it blank if you don't want to change it",
+                  required: false,
+                  input_html: { autocomplete: "new-password" } %>
+        <%= f.input :password_confirmation,
+                  required: false,
+                  input_html: { autocomplete: "new-password" } %>
+      </div>
+      <div class="py-3" style='margin-top: 4em;'>
+        <h5 class='text-center'>Confirm changes and update</h5>
+        <%= f.input :current_password,
+                    hint: "we need your current password to confirm your changes",
+                    required: true,
+                    input_html: { autocomplete: "current-password" } %>
+      </div>
+    </div>
+
+    <div class="form-actions">
+      <%= f.button :submit, "Update", class: 'w-100 btn-warning' %>
+    </div>
+  <% end %>
+
+  <div class="py-3" style='margin-top: 4em;'>
+    <h5 class='text-center'>Want to cancel your account?</h5>
+    <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'w-100 btn btn-outline-warning' %></p>
   </div>
+</div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
