--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,108 @@
-// Place all the styles related to the posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.banner-wraper{
+  padding: 0 0 10% 0;
+  background: linear-gradient(90deg, #FDBB2D 0%, #3A1C71 100%);
+  color: #fff;
+  .container{
+    padding-top: 5%;
+  }
+}
+.grand-title{
+  font-family: 'Passion One', cursive;
+  letter-spacing: 2px;
+  font-size: calc(15vw) !important;
+}
+.sub-title{
+}
+a > *, a:hover{
+  text-decoration: none !important;
+  color: darkgrey;
+}
+.picture img{
+  // border-radius: 50%;
+  width: 100%;
+}
+.post-card{
+  margin-bottom: 4em;
+}
+.card-title{
+  margin: 16px 0 !important;
+  padding-left: 8px;
+  font-size: 3em;
+  border-left: 5px solid gold;
+}
+.card-context{
+  padding: 1em 0;
+}
+
+.card--footer, .footer{
+  display: flex;
+  justify-content: flex-end;
+}
+.card--footer small > *{
+  margin: 0 5px;
+}
+
+// post#show
+.banner{
+  width: 100%;
+  min-height: 30vh;
+  border-top: 3px solid indigo;
+}
+.lead {
+  letter-spacing: 1px;
+  font-size: 1.25rem;
+  font-weight: 300;
+  margin: 8px;
+}
+.post-header{
+  padding: 5% 0 2%;
+}
+.post-title{
+  // font-size: 4em !important;
+  // margin: 0;
+}
+.trix-content{
+  font-size: 1.3em;
+  color: #6c757d;
+  text-align: justify;
+}
+//
+// top-3
+//
+.top3-picture{
+  position: relative;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 30vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.top3-lead {
+  position: absolute;
+  bottom: -1em;
+  width: 100%;
+  text-align: center;
+  span{
+    padding: 8px 16px;
+    font-size: x-large;
+    background: gold;
+    /* border-radius: 4px; */
+    opacity: 0.8;
+  }
+}
+.top-3-title {
+  margin-top: 30px;
+  font-size: xx-large;
+}
+.section-header{
+  text-align: center;
+  font-family: 'Passion One', cursive;
+  letter-spacing: 2px;
+  font-size: 4em;
+  padding-bottom: 16px;
+}
+.section{
+  margin: 5% 0;
+  border-top: 4px solid indigo;
+}
