add custom fonts and components style (footer and pagination

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,9 +2,9 @@
   <%= render 'layouts/partials/alerts' %>
   <%= render 'layouts/partials/navbar', locals: {theme: 'navbar-dark'} %>
   <div class="container">
-    <h4 class='sub-title'>Welcome to</h4>
-    <h1 class="grand-title">RoR Blog</h1>
-    <h4 class='sub-title'>This project was built using Ruby on Rails framework. The application is dynamic and asynchronous thanks to JQuery. Feel free to check it out on your phone. It's responsive. Enjoy!</h4>
+    <h4 class='sub-title d-none d-md-block'>Welcome to</h4>
+    <h1 class="grand-title text-center text-md-left">RoR Blog</h1>
+    <h4 class='sub-title d-none d-md-block'>This project was built using Ruby on Rails framework. The application is dynamic and asynchronous thanks to JQuery. Feel free to check it out on your phone. It's responsive. Enjoy!</h4>
   </div>
 </div>
 
