--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,4 +17,5 @@
 @import "./actiontext.scss";
 @import "./components/footer";
 @import "./components/pagination";
+@import "./components/forms";
 @import "./fonts";
