--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -34,7 +34,7 @@
 
 <!-- comments reply -->
 <div class="row justify-content-end">
-  <div class="col-12 col-md-10">
+  <div class="col-12 col-md-10 text-dark">
     <% if comment.comments.count > 0 %>
       <div class="inner-comment-container" id="reply-<%= comment.id %>">
       <% comment.comments.each do |comment| %>
