--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,7 @@
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= f.error_notification %>
 
-    <div class="row align-items-end" style='margin: 4em 0;'>
+    <div class="row align-items-end form-section" style='margin: 4em 0;'>
       <div class="col">
         <%= cl_image_tag current_user.avatar.key, height: 120, width: 120, radius: 'max', crop: 'fill' %>
       </div>
@@ -13,14 +13,16 @@
       </div>
     </div>
     <div class="form-inputs">
-      <%= f.input :username, required: true %>
-      <%= f.input :email, required: true %>
+      <div class="form-section">
+        <div class="py-2"><%= f.input :username, required: true %></div>
+        <div class="py-2"><%= f.input :email, required: true %></div>
+      </div>
 
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
       <% end %>
 
-      <div class="password-change py-3">
+      <div class="form-section">
         <h5 class='text-center'>Pssword change</h5>
         <%= f.input :password,
                   hint: "leave it blank if you don't want to change it",
@@ -30,7 +32,7 @@
                   required: false,
                   input_html: { autocomplete: "new-password" } %>
       </div>
-      <div class="py-3" style='margin-top: 4em;'>
+      <div class="form-section py-3" style='margin-top: 4em;'>
         <h5 class='text-center'>Confirm changes and update</h5>
         <%= f.input :current_password,
                     hint: "we need your current password to confirm your changes",
@@ -50,3 +52,4 @@
   </div>
 </div>
 
+<%= link_to "Back", root_path, class: 'btn btn-light m-3' %>
